@@ -1,3 +1,9 @@
+19/08/09 Sylvain Gaillard
+* Introduced 3 new interfaces IOSequenceStream, ISequenceStream and
+  OSequenceStream. These interfaces are intended to be used by IOFormat
+  dealing with Sequence and not SequenceContainers. They are actually
+  implemented by the Fasta class.
+
 17/08/09 Adam Smith
 * Bug fixed in DefaultAlphabet: unknow state is 37 not 38.
 
